oops someones twitter name was NaN

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
     This site is just intended to display old and current projects of mine		
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: NaN
+twitter_username: 
 github_username:  bb-blud
 
 # Build settings
