replaced one of the lines using the site's title with my name, on footer.html, by adding a new entry in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: 
 github_username:  bb-blud
+myname: Robert M Salom
 
 # Build settings
 markdown: kramdown
