--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Bb-blud.GitHub.io
+title: bb-blud.github.io
 email: rsalo001@gmail.com	
 description: > # this means to ignore newlines until "baseurl:"
     Hi!  
@@ -15,7 +15,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: 
 github_username:  bb-blud
-myname: Robert M Salom
+myname: Robert
 
 # Build settings
 markdown: kramdown
